=fixed keep reading link being off center

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h3 {
 }
 
 a.button {
-	width: 200px;
+    text-align: center;
 	display: block;
 	margin: 10px auto;
 	background: none;
